src/test/deca/context/invalid/provided/testi05.deca
class A{
    int hmida;
}
class B extends A{
    int hmida(){}
}